--- a/ejercicio-imagenes-productos/index.html
+++ b/ejercicio-imagenes-productos/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">  
     <link href="https://allfont.net/allfont.css?fonts=lucida-sans-unicode" rel="stylesheet" type="text/css" />
     <link rel="stylesheet" href="css/styles.css">
-    <title>Producto</title>
+    <title>Productos</title>
 </head>
 
 <body>
